# aubo_ign_gazebo

./: README.md
aubo_controller/: CMakeLists.txt  README.md  package.xml
aubo_controller/include/: aubo_ros2_driver.h  threadSafeQueue.h
aubo_controller/main/: driver_sdk copy.cpp  driver_sdk.cpp  driver_sdk_copy.cpp  main.cpp  main_copy.cpp
aubo_description/: CMakeLists.txt  package.xml
aubo_description/launch/: display.launch.py  displayi5.launch.py
aubo_description/urdf/: aubo_i10.urdf.xacro  aubo_i10_depth_camera.urdf.xacro  aubo_i3.urdf.xacro  aubo_i5.sdf  aubo_i5.urdf  aubo_i5.urdf.xacro  aubo_i5_depth_camera.urdf.xacro  my_robot.urdf.xacro
aubo_i10/: .setup_assistant  CMakeLists.txt  package.xml
aubo_i10/config/: aubo_i10.ros2_control.xacro  aubo_i10.srdf  aubo_i10.urdf.xacro  joint_names.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
aubo_i10/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_robot.launch.py  rsp.launch.py  setup_assistant.launch.py  simulation.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
aubo_i10_depth/: .setup_assistant  CMakeLists.txt  package.xml
aubo_i10_depth/config/: aubo_i10_depth_camera.ros2_control.xacro  aubo_i10_depth_camera.srdf  aubo_i10_depth_camera.urdf.xacro  initial_positions.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml
aubo_i10_depth/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_robot.launch.py  rsp.launch.py  setup_assistant.launch.py  simulation.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
aubo_i5/: .setup_assistant  CMakeLists.txt  package.xml  save copy.json  save.json  save.yaml
aubo_i5/config/: aubo_i5.ros2_control.xacro  aubo_i5.srdf  aubo_i5.urdf.xacro  chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  (+9 more)
aubo_i5_depth/: .setup_assistant  CMakeLists.txt  package.xml  save.json
aubo_ros2_trajectory_action/: CMakeLists.txt
(+38 files in other folders)
